Use fxLayoutGap to set margin bottom to all component in form TAG & Prevent to click submit btn if all conditions are not satisfied

--- a/src/app/auth/signup/signup.component.css
+++ b/src/app/auth/signup/signup.component.css
@@ -2,6 +2,6 @@ mat-form-field {
   width: 300px;
 }
 
-.submit-btn {
+/* .submit-btn {
   margin-top: 30px;
-}
+} */
